Add swagger schema definitions for our models
